--- a/src/components/getting-started.stories.mdx
+++ b/src/components/getting-started.stories.mdx
@@ -5,11 +5,11 @@ import markdown from '../../README.md';
 
 <Meta title="Getting Started" />
 
-# FireEnjin Components
+# Enjin Editor
 
 ## Github
-- Repo: https://github.com/madnesslabs/firenjin-components
-- Issues: https://github.com/madnesslabs/firenjin-components/issues
+- Repo: https://github.com/madnesslabs/enjin-editor
+- Issues: https://github.com/madnesslabs/enjin-editor/issues
 
 ## MDX links
 - [MDX](https://mdxjs.com/getting-started)
@@ -24,11 +24,11 @@ in your `package.json`
   code={dedent`
      <script type="module" src="${namespace}.esm.js"></script>
      <link rel="stylesheet" href="${namespace}.css" />
-     <my-component ...></my-component>
+     <enjin-editor ...></enjin-editor>
   `}
 />
 
-## [Readme](https://github.com/madnesslabs/firenjin-components/blob/main/README.md)
+## [Readme](https://github.com/madnesslabs/enjin-editor/blob/main/README.md)
 <Source
   language='markdown'
   code={markdown}
